// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Legend /> > Default story renders snapshot 1`] = `
<div
  class="css-1bg97cd-LegendContainer ezuih624"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1lt1ult-LegendIcon ezuih622"
      color="#615da2"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      H. sapiens
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1hygihe-LegendIcon ezuih622"
      color="#9e5798"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      M. musculus
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-3v8dx5-LegendIcon ezuih622"
      color="#b76278"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      C. Jacques
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-19renla-LegendIcon ezuih622"
      color="#b27c5a"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      D. rerio
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-ofewzh-LegendIcon ezuih622"
      color="#9e9554"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      M. mulatta
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-bubf6y-LegendIcon ezuih622"
      color="#89ab60"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      P. mirabillis
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-15xl5rz-LegendIcon ezuih622"
      color="#78bc7f"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      V. cholerae
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1u7iiun-LegendIcon ezuih622"
      color="#8ac2d2"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      Other (17)
    </span>
  </div>
</div>
`;

exports[`<Legend /> > WithSelection story renders snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="css-1bg97cd-LegendContainer ezuih624"
  >
    <div
      aria-label="H. sapiens: 3212"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1lt1ult-LegendIcon ezuih622"
        color="#615da2"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        H. sapiens
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        3,212
      </span>
    </div>
    <div
      aria-label="M. musculus: 130"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1hygihe-LegendIcon ezuih622"
        color="#9e5798"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        M. musculus
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        130
      </span>
    </div>
    <div
      aria-label="C. Jacques: 89"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-3v8dx5-LegendIcon ezuih622"
        color="#b76278"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        C. Jacques
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        89
      </span>
    </div>
    <div
      aria-label="D. rerio: 65"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-19renla-LegendIcon ezuih622"
        color="#b27c5a"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        D. rerio
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        65
      </span>
    </div>
    <div
      aria-label="M. mulatta: 45"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-ofewzh-LegendIcon ezuih622"
        color="#9e9554"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        M. mulatta
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        45
      </span>
    </div>
    <div
      aria-label="P. mirabillis: 34"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-bubf6y-LegendIcon ezuih622"
        color="#89ab60"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        P. mirabillis
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        34
      </span>
    </div>
    <div
      aria-label="V. cholerae: 12"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-15xl5rz-LegendIcon ezuih622"
        color="#78bc7f"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        V. cholerae
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        12
      </span>
    </div>
    <div
      aria-label="Other (17): 40"
      aria-pressed="false"
      class="css-n3ggxj-LegendItem ezuih623"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1u7iiun-LegendIcon ezuih622"
        color="#8ac2d2"
      />
      <span
        class="css-1yxv6ch-LegendLabel ezuih621"
      >
        Other (17)
      </span>
      <span
        class="css-o3szpf-LegendValue ezuih620"
      >
        40
      </span>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeLarge MuiButton-colorPrimary et5j5k2 css-1ydqmdp-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-PrimaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          Select All
        </span>
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeLarge MuiButton-colorPrimary et5j5k2 css-1v2hn6p-MuiButtonBase-root-MuiButton-root-StyledButton-GeneralButtonStyles-SecondaryButtonStyles-LargeButtonStyles-StyledButton"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1vy3uni-StyledChildren-StyledChildren et5j5k1"
        >
          Clear Selection
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<Legend /> > WithValues story renders snapshot 1`] = `
<div
  class="css-1bg97cd-LegendContainer ezuih624"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1lt1ult-LegendIcon ezuih622"
      color="#615da2"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      H. sapiens
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      3,212
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1hygihe-LegendIcon ezuih622"
      color="#9e5798"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      M. musculus
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      130
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-3v8dx5-LegendIcon ezuih622"
      color="#b76278"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      C. Jacques
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      89
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-19renla-LegendIcon ezuih622"
      color="#b27c5a"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      D. rerio
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      65
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-ofewzh-LegendIcon ezuih622"
      color="#9e9554"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      M. mulatta
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      45
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-bubf6y-LegendIcon ezuih622"
      color="#89ab60"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      P. mirabillis
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      34
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-15xl5rz-LegendIcon ezuih622"
      color="#78bc7f"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      V. cholerae
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      12
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-n3ggxj-LegendItem ezuih623"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1u7iiun-LegendIcon ezuih622"
      color="#8ac2d2"
    />
    <span
      class="css-1yxv6ch-LegendLabel ezuih621"
    >
      Other (17)
    </span>
    <span
      class="css-o3szpf-LegendValue ezuih620"
    >
      40
    </span>
  </div>
</div>
`;
